--- a/src/predictmod/templates/_layout.html
+++ b/src/predictmod/templates/_layout.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/app.css">
 
@@ -17,11 +20,22 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h1>Upload new Dataset</h1>
-            <form method=post enctype=multipart/form-data>
-              <input type=file name=file>
-              <input type=submit value=Upload>
+          <div class="card-header">
+            <h4>Upload new Dataset</h4>
+          </div>
+          <div class="card-block">
+            <form method=post enctype=multipart/form-data id="uploadForm">
+              <div class="input-group">
+                <div class="custom-file">
+                  <input type="file" class="custom-file-input" name=file id="fileselection">
+                  <label class="custom-file-label" for="fileselection"></label>
+                </div>
+                <div class="input-group-append">
+                  <button form="uploadForm" class="btn btn-outline-secondary" type="submit"> Upload</button>
+                </div>
+              </div>
             </form>
+          </div>
         </div>
       </div>
     </div>
@@ -29,5 +43,14 @@
     {% endblock %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+    <script>
+            $('#fileselection').on('change',function(){
+                //get the file name
+                var fileName = $(this).val();
+                parts = fileName.split('\\')
+                //replace the "Choose a file" label
+                $(this).next('.custom-file-label').html(parts[parts.length - 1]);
+            })
+        </script>
   </body>
 </html>
