--- a/src/predictmod/templates/index.html
+++ b/src/predictmod/templates/index.html
@@ -2,6 +2,29 @@
 {% block content %}
 
 <div class="container" style="margin-top: 10px">
+  <div class="row align-items-center">
+    <div class="col-lg-12">
+      {% with messages = get_flashed_messages() %}
+          {% if messages %}
+            {% for message in messages %}
+              {% if 'Error' in message %}
+                <div class="alert alert-danger alert-dismissible col" role="alert">{{ message }}
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+              {% else %}
+                <div class="alert alert-info alert-dismissible col" role="alert">{{ message }}
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+              {% endif %}
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
+      </div>
+  </div>
   <div class="row">
     <div class="col-lg-12">
       <div class="card">
