--- a/src/predictmod/static/app.css
+++ b/src/predictmod/static/app.css
@@ -15,3 +15,20 @@ td {
 .card-block.white a, .card-block.white a:link, .card-block.white a:visited, .card-block.white a:active, .card-block.white a:focus {
   color: white;
 }
+
+.btn-glyphicon {
+    padding:8px;
+    background:#ffffff;
+    margin-right:4px;
+}
+.icon-btn {
+    padding: 1px 15px 3px 2px;
+    border-radius:50px;
+}
+
+.material-icons.whitebtn {
+	color: #FB8C00; 
+	padding:8px;
+    background:#ffffff;
+    margin-right:4px;
+}
